--- a/thanks.html
+++ b/thanks.html
@@ -96,7 +96,7 @@ form textarea {
   clear: both;
 }
 </style></head><body>
-<h1>You have submitted your Web to Lead</h1>
+<h1>Your request has been submitted</h1>
 
 
 </body></html>
