--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ form textarea {
 <form class="cf" action="https://sdodocusign--mouseco1.cs67.my.salesforce.com/servlet/servlet.WebToLead" method="POST">
   <div class="half left cf">
     <input type=hidden name="oid" value="00D0n0000000O4C">
+	<input type=hidden name="retURL" value="https://webtoleadbcn.herokuapp.com/thanks.html"> 
 <input type=hidden name="retURL" value="http://">
     <input type="text" id="first_name" maxlength="40" name="first_name" size="20" type="text" placeholder="First Name">
         <input type="text" id="last_name" maxlength="40" name="last_name" size="20" type="text" placeholder="Last Name">
