--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ form textarea {
   clear: both;
 }
 </style></head><body>
-<h1>Web to Lead</h1>
+<h1>Welcome to Mouse&Co </h1>
 <form class="cf" action="https://sdodocusign--mouseco1.cs67.my.salesforce.com/servlet/servlet.WebToLead" method="POST">
   <div class="half left cf">
     <input type=hidden name="oid" value="00D0n0000000O4C">
