--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ form textarea {
     <input type=hidden name="oid" value="00D0n0000000O4C">
 	<input type=hidden name="retURL" value="https://webtoleadbcn.herokuapp.com/thanks.html"> 
 <input type=hidden name="retURL" value="http://">
+	  <option value="0120n0000008d51">Pending</option> 
     <input type="text" id="first_name" maxlength="40" name="first_name" size="20" type="text" placeholder="First Name">
         <input type="text" id="last_name" maxlength="40" name="last_name" size="20" type="text" placeholder="Last Name">
     <input type="text" id="email" maxlength="40" name="email" size="20" type="text" placeholder="Email">
