--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ form textarea {
     <option value="0126A000000pUxZ">Deal Registrations</option>
 	<input type=hidden name="retURL" value="https://webtoleadbcn.herokuapp.com/thanks.html">
 <input type=hidden name="retURL" value="http://">
+	  <input type="hidden" name="recordType" id="recordType" value="0120n0000008d51">
     <input type="text" id="first_name" maxlength="40" name="first_name" size="20" type="text" placeholder="First Name">
         <input type="text" id="last_name" maxlength="40" name="last_name" size="20" type="text" placeholder="Last Name">
     <input type="text" id="email" maxlength="40" name="email" size="20" type="text" placeholder="Email">
