--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@ form textarea {
 <h1>Welcome to Mouse&Co </h1>
 <form class="cf" action="https://sdodocusign--mouseco1.cs67.my.salesforce.com/servlet/servlet.WebToLead" method="POST">
   <div class="half left cf">
-    <input type=hidden name="oid" value="0120n0000008d51AAA">
+	  <input type=hidden name="oid" value="00D0n0000000O4C">
     <option value="0126A000000pUxZ">Deal Registrations</option>
 	<input type=hidden name="retURL" value="https://webtoleadbcn.herokuapp.com/thanks.html">
-	  <input type=hidden name="recordType" id="recordType" value="0120n0000008d51">
+	  <input type=hidden name="recordType" id="recordType" value="0120n0000008d51AAA">
     <input type="text" id="first_name" maxlength="40" name="first_name" size="20" type="text" placeholder="First Name">
         <input type="text" id="last_name" maxlength="40" name="last_name" size="20" type="text" placeholder="Last Name">
     <input type="text" id="email" maxlength="40" name="email" size="20" type="text" placeholder="Email">
